--- a/public/js/views/users/show.html
+++ b/public/js/views/users/show.html
@@ -1,3 +1,4 @@
 <h1>{{ usersShow.user.username }}</h1>
 <button class="btn btn-primary" ui-sref="usersEdit({ id: usersShow.user.id })">Edit</button>
 <button class="btn btn-danger" ng-click="usersShow.delete()">Delete</button>
+<button class="btn btn-secondary" ng-click="usersShow.delete()">Add Ticket</button>
