--- a/public/js/views/users/show.html
+++ b/public/js/views/users/show.html
@@ -1,4 +1,27 @@
-<h1>{{ usersShow.user.username }}</h1>
-<button class="btn btn-primary" ui-sref="usersEdit({ id: usersShow.user.id })">Edit</button>
-<button class="btn btn-danger" ng-click="usersShow.delete()">Delete</button>
-<button class="btn btn-secondary" ng-click="usersShow.delete()">Add Ticket</button>
+<h1>{{ show.user.username }}</h1>
+<h2>Tickets</h2>
+<ul>
+  <li ng-repeat="ticket in show.user.tickets track by $index">
+    <ul>
+      <li ui-sref="ticketsEdit({ id: ticket.id })">{{ ticket.club }}</li>
+    </ul>
+  </li>
+</ul>
+
+<h2>Games</h2>
+<ul>
+  <li ng-repeat="game in show.user.games track by $index">
+    {{ game }}
+  </li>
+</ul>
+
+<h2>Swaps</h2>
+<ul>
+  <li ng-repeat="swap in show.user.swaps track by $index">
+    {{ swap }}
+  </li>
+</ul>
+
+
+<button class="btn btn-primary" ui-sref="usersEdit({ id: show.user.id })">Edit</button>
+<button class="btn btn-danger" ng-click="show.delete()">Delete</button>
