--- a/src/js/views/users/edit.html
+++ b/src/js/views/users/edit.html
@@ -1,28 +1,28 @@
 <h1>Edit</h1>
-<form ng-submit="usersEdit.submit()">
+<form ng-submit="edit.submit()">
   <div class="form-group">
-    <input class="form-control" type="text" name="username" ng-model="usersEdit.user.username" placeholder="Username">
+    <input class="form-control" type="text" name="username" ng-model="edit.user.username" placeholder="Username">
   </div>
   <div class="form-group">
-    <input class="form-control" type="text" name="first_name" ng-model="usersEdit.user.first_name" placeholder="First Name">
+    <input class="form-control" type="text" name="first_name" ng-model="edit.user.first_name" placeholder="First Name">
   </div>
   <div class="form-group">
-    <input class="form-control" type="text" name="last_name" ng-model="usersEdit.user.last_name" placeholder="Last Name">
+    <input class="form-control" type="text" name="last_name" ng-model="edit.user.last_name" placeholder="Last Name">
   </div>
   <div class="form-group">
-    <input class="form-control" type="email" name="email" ng-model="usersEdit.user.email" placeholder="Email">
+    <input class="form-control" type="email" name="email" ng-model="edit.user.email" placeholder="Email">
   </div>
   <div class="form-group">
-    <input class="form-control" type="text" name="image" ng-model="usersEdit.user.image" placeholder="Profile Picture">
+    <input class="form-control" type="text" name="image" ng-model="edit.user.image" placeholder="Profile Picture">
   </div>
   <div class="form-group">
-    <input class="form-control" type="text" name="team" ng-model="usersEdit.user.team" placeholder="What team do you support?">
+    <input class="form-control" type="text" name="team" ng-model="edit.user.team" placeholder="What team do you support?">
   </div>
   <div class="form-group">
-    <input class="form-control" type="password" name="password" ng-model="usersEdit.user.password" placeholder="Password">
+    <input class="form-control" type="password" name="password" ng-model="edit.user.password" placeholder="Password">
   </div>
   <div class="form-group">
-    <input class="form-control" type="password" name="password_confirmation" ng-model="usersEdit.user.password_confirmation" placeholder="Password confirmation">
+    <input class="form-control" type="password" name="password_confirmation" ng-model="edit.user.password_confirmation" placeholder="Password confirmation">
   </div>
   <input class="btn btn-primary" type="submit" value="Submit" />
 </form>
