--- a/public/js/views/games/index.html
+++ b/public/js/views/games/index.html
@@ -1,9 +1,5 @@
 <h1>Games</h1>
-<ul>
-  <li ng-repeat="game in index.games track by $index">
-    <ul>
-      <li>{{ game.home }} vs {{ game.away }} on {{ game.date }}</li>
-      <li><a ui-sref="swapsNew({ id: game.id })">Swap</a></li>
-    </ul>
-  </li>
-</ul>
+<div ng-repeat="game in index.games track by $index">
+  <h2>{{ game.home }} vs {{ game.away }} on {{ game.date }}</h2>
+  <a class="btn btn-primary pull-right" ui-sref="swapsNew({ id: game.id })">Swap</a>
+</div>
