--- a/src/js/views/tickets/edit.html
+++ b/src/js/views/tickets/edit.html
@@ -13,7 +13,7 @@
   </div>
 
   <div class="form-group">
-    <label for="value">Please say the face value for your ticket</label>
+    <label for="value">Please state the face value for your ticket</label>
     <input class="form-control" name="number" id="value" ng-model="edit.ticket.value">
   </div>
 
