--- a/src/js/views/users/show.html
+++ b/src/js/views/users/show.html
@@ -1,27 +1,42 @@
-<h1>{{ show.user.username }}</h1>
-<h2>Tickets</h2>
-<ul>
-  <li ng-repeat="ticket in show.user.tickets track by $index">
-    <ul>
-      <li ui-sref="ticketsEdit({ id: ticket.id })">{{ ticket.club }}</li>
-    </ul>
-  </li>
-</ul>
+<h2>{{ show.user.username }}'s Profile</h2>
+<img id="ranepic" src="http://i.imgur.com/8SqDCWa.png" alt="" />
+
+<h2>{{ show.user.username }}'s Tickets</h2>
+
+
+<div ng-repeat="ticket in show.user.tickets track by $index">
+  <a ui-sref="ticketsEdit({ id: ticket.id })">
+    <h4>{{ ticket.club }}</h4>
+  </a>
+</div>
 
 <h2>Games</h2>
-<ul>
-  <li ng-repeat="game in show.user.games track by $index">
-    {{ game }}
-  </li>
-</ul>
+<div ng-repeat="game in show.user.games track by $index">
+  <h4>{{ game.home }} vs {{ game.away }} on {{ game.date }}</h4>
+</li>
 
-<h2>Swaps</h2>
-<ul>
-  <li ng-repeat="swap in show.user.swaps track by $index">
-    {{ swap }}
-  </li>
-</ul>
+<h2>Sent Swaps</h2>
+<div ng-repeat="swap in show.user.sent_swaps track by $index">
+  <h4>{{ swap.game.home }} vs {{ swap.game.away }} on {{ swap.game.date }}</h4>
+  <p>{{ swap.comment }}</p>
+</div>
 
+<div class="pending swaps">
+  <h2>Pending Swaps</h2>
+  <div ng-repeat="swap in show.user.pending_swaps track by $index">
+    <h4>{{ swap.game.home }} vs {{ swap.game.away }} on {{ swap.game.date }}</h4>
+    <p>{{ swap.comment }}</p>
+    <a class="btn btn-primary" ng-click="show.accept(swap)">Accept</a>
+    <a class="btn btn-primary" ng-click="show.reject(swap)">Reject</a>
+  </div>
+</div>
+<h2>Received Swaps</h2>
+<div ng-repeat="swap in show.user.accepted_swaps track by $index">
+  <h4>{{ swap.game.home }} vs {{ swap.game.away }} on {{ swap.game.date }}</h4>
+  <p>{{ swap.comment }}</p>
+  <a class="btn btn-primary" ng-click="show.accept(swap)">Accept</a>
+  <a class="btn btn-primary" ng-click="show.reject(swap)">Reject</a>
+</div>
 
 <button class="btn btn-primary" ui-sref="usersEdit({ id: show.user.id })">Edit</button>
 <button class="btn btn-danger" ng-click="show.delete()">Delete</button>
