--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,6 +9,6 @@ $white:          #FFFFFF;
 $almostBlack:    #222222;
 
 // Typography
-$logo-font:      'Bungee', cursive;
+$logo-font:      'Sarpanch', sans-serif;
 $header-font:    'Montserrat', sans-serif;
 $body-font:      'Work Sans', sans-serif;
