--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -7,6 +7,10 @@ h1,h2,h3,h4,h5,h6 {
   font-family: $header-font;
 }
 
+h1 {
+  text-align: center;
+}
+
 h4 {
   color: $sandyBrown;
 }
@@ -16,7 +20,16 @@ main {
 }
 
 .main-title {
-  margin-top: 40%;
+  margin-top: 25%;
   text-align: center;
-  font-size: 4em;
+  font-size: 6em;
+  font-family: "blacksword"
 }
+
+.form-group {
+  border: 1px dashed black;
+  border-radius: 5px;
+}
+ .chooseTicket {
+   padding: 10px;
+ }
